--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Nuevo.cshtml
@@ -192,8 +192,7 @@
     };
 
     function mostrar_fechas() {
-        var es_indifinido = es_indifinido.GetValue();
-        if (es_indifinido == true) {
+        if (es_indifinido.GetValue()) {
             $("#col_FechaFin").show();
             $("#col_FechaInicio").show();
 
