--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/Anular.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable</label>
+                    <label for="IdCtaCble">Cuenta contable*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble, settings =>
                {
                    settings.Name = "IdCtaCble";
