--- a/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/Nuevo.cshtml
@@ -29,7 +29,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable</label>
+                    <label for="IdCtaCble">Cuenta contable*</label>
                     @Html.Partial("_CmbCuenta_Tipo_movimiento", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
