--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_det.cshtml
@@ -38,7 +38,7 @@
         {
             e.NewValues["IdProducto"] = "";
             e.NewValues["IdUnidadMedida"] = "UNID";
-            e.NewValues["Cantidad"] = "";
+            e.NewValues["Cantidad"] = "1";
             e.NewValues["CostoUni"] = "";
             e.NewValues["PorDescuento"] = "0";
         };
