--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
@@ -40,9 +40,9 @@
         {
             e.NewValues["IdProducto"] = 0;
             e.NewValues["IdCod_Impuesto_Iva"] = "IVA0";
-            e.NewValues["vt_cantidad"] = "";
+            e.NewValues["vt_cantidad"] = "1";
             e.NewValues["vt_Precio"] = "";
-            e.NewValues["vt_PorDescUnitario"] = "";
+            e.NewValues["vt_PorDescUnitario"] = "0";
         };
         settings.Columns.Add(column =>
         {
