--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
@@ -34,6 +34,8 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
         //Funcion para inicializar fila al presionar nuevo
+        settings.InitNewRow = (s, e) =>
+    
 
         settings.Columns.Add(column =>
         {
