--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
@@ -40,9 +40,9 @@
         {
             e.NewValues["IdProducto"] = 0;
             e.NewValues["IdCod_Impuesto"] = "IVA0";
-            e.NewValues["pd_cantidad"] = "";
+            e.NewValues["pd_cantidad"] = "1";
             e.NewValues["pd_precio"] = "";
-            e.NewValues["pd_por_descuento_uni"] = "";
+            e.NewValues["pd_por_descuento_uni"] = "0";
         };
         settings.Columns.Add(column =>
         {
