--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
@@ -35,7 +35,7 @@
         {
             e.NewValues["IdProducto"] = 0;
             e.NewValues["IdUnidadMedida"] = null;
-            e.NewValues["od_cantidad"] = "";
+            e.NewValues["od_cantidad"] = "1";
             e.NewValues["od_costo"] = "";
         };
 
