--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_inv_det.cshtml
@@ -35,7 +35,7 @@
         {
             e.NewValues["IdProducto"] = 0;
             e.NewValues["IdUnidadMedida_sinConversion"] = "UNID";
-            e.NewValues["dm_cantidad_sinConversion"] = "";
+            e.NewValues["dm_cantidad_sinConversion"] = "1";
             e.NewValues["mv_costo_sinConversion"] = "";
         };
 
