--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Anular.cshtml
@@ -53,7 +53,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable</label>
+                    <label for="IdCtaCble">Cuenta contable*</label>
                     @Html.Partial("_CmbCuenta_Caja", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
