--- a/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/Modificar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Caja.caj_Caja_Movimiento_Tipo_Info
+﻿ @model Core.Erp.Info.Caja.caj_Caja_Movimiento_Tipo_Info
 @{
     ViewBag.Title = "Modificar tipo";
 
@@ -30,7 +30,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable</label>
+                    <label for="IdCtaCble">Cuenta contable*</label>
                     @Html.Partial("_CmbCuenta_Tipo_movimiento", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
