--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_NotaDebitoFacturacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_NotaDebitoFacturacion_det.cshtml
@@ -40,7 +40,7 @@
         {
             e.NewValues["IdProducto"] = 0;
             e.NewValues["IdCod_Impuesto_Iva"] = "IVA0";
-            e.NewValues["sc_cantidad"] = "";
+            e.NewValues["sc_cantidad"] = "1";
             e.NewValues["sc_Precio"] = "";
             e.NewValues["sc_PordescUni"] = 0;
         };
