--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/Nuevo.cshtml
@@ -83,7 +83,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCtble_Costo">Cuenta contable costo</label>
+                    <label for="IdCtaCtble_Costo">Cuenta contable costo*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCtble_Costo, settings =>
                {
                    settings.Name = "IdCtaCtble_Costo";
@@ -110,7 +110,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCtble_Inve">Cuenta contable inv</label>
+                    <label for="IdCtaCtble_Inve">Cuenta contable inv*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCtble_Inve, settings =>
                {
                    settings.Name = "IdCtaCtble_Inve";
