--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Anular.cshtml
@@ -152,7 +152,7 @@
         var monto = $("#cr_Valor").val();
 
         var datos = {
-            IdEmpresa = $("#IdEmpresa").val(),
+            IdEmpresa: $("#IdEmpresa").val(),
             IdCaja: caja,
             IdTipoMovi: tipo_movimiento,
             valor: monto,
