--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ClaseProveedor/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ClaseProveedor/Nuevo.cshtml
@@ -39,33 +39,6 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Anticipo">Cta. Cble. Anticipo</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Anticipo, settings =>
-               {
-                   settings.Name = "IdCtaCble_Anticipo";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCtaCble";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "pc_Cuenta";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_cuentas).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdCtaCble_Anticipo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
                     <label for="IdCtaCble_gasto">Cta. Cble. Gasto</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_gasto, settings =>
                {
@@ -93,7 +66,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_CXP">Cta. Cble. CXP</label>
+                    <label for="IdCtaCble_CXP">Cta. Cble. CXP*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_CXP, settings =>
                {
                    settings.Name = "IdCtaCble_CXP";
