--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Anular.cshtml
@@ -38,7 +38,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_CXC_Con">Cuenta contable contado</label>
+                    <label for="IdCtaCble_CXC_Con">Cuenta contable contado*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_CXC_Con, settings =>
                {
                    settings.Name = "IdCtaCble_CXC_Con";
@@ -65,7 +65,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_CXC_Cred">Cuenta contable credito</label>
+                    <label for="IdCtaCble_CXC_Cred">Cuenta contable credito*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_CXC_Cred, settings =>
                {
                    settings.Name = "IdCtaCble_CXC_Cred";
@@ -84,33 +84,6 @@
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                }).BindList(ViewBag.lst_cuentas).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdCtaCble_CXC_Cred, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdCtaCble_CXC_Anticipo">Cuenta contable anticipo</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_CXC_Anticipo, settings =>
-               {
-                   settings.Name = "IdCtaCble_CXC_Anticipo";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCtaCble";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "pc_Cuenta";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_cuentas).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdCtaCble_CXC_Anticipo, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
